iptables-save.txt
# Generated by iptables-save v1.4.7 on Mon Feb 17 12:35:15 2014
*nat
:PREROUTING ACCEPT [1625892:510020191]
:POSTROUTING ACCEPT [6062861:365789316]
:OUTPUT ACCEPT [6062861:365789316]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 9080 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 9443 
COMMIT
# Completed on Mon Feb 17 12:35:15 2014
# Generated by iptables-save v1.4.7 on Mon Feb 17 12:35:15 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [20581311:4953601739]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9080 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9443 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Mon Feb 17 12:35:15 2014
